Fix playback button vertical alignment

--- a/app/components/media/PlaybackControls.css
+++ b/app/components/media/PlaybackControls.css
@@ -13,7 +13,7 @@
   border: none;
   outline: none;
 
-  font-size: 22px;
+  font-size: 0;
 
   color: var(--app-text-color);
   background: transparent;
